--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
         const projectData = {
             ticketing: {
                 title: "Enhanced Ticketing with Replacement Request System",
-                image: "images/ticketing-project.svg",
+                image: "images/it-helpdesk-project.jpg",
                 role: "Full Stack Developer & Project Lead",
                 description: "A comprehensive IT support ticketing system designed to streamline help desk operations with integrated replacement request functionality. The system features automated email notifications, real-time status tracking, and detailed reporting capabilities.",
                 responsibilities: [
