--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
                 role: "Full Stack Developer & Project Lead",
                 description: "A comprehensive IT support ticketing system designed to streamline help desk operations with integrated replacement request functionality. The system features automated email notifications, real-time status tracking, and detailed reporting capabilities.",
                 responsibilities: [
-                    "Designed and developed the complete web application architecture",
+                    "Enhanced and developed the complete web application architecture",
                     "Implemented secure user authentication and authorization systems",
                     "Created automated email notification system using SMTP integration",
                     "Developed responsive frontend with modern JavaScript functionality",
