--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                 <h2 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-4 gradient-text">My Projects</h2>
                 <div class="w-24 h-1 bg-gradient-to-r from-primary-600 to-secondary-600 mx-auto rounded-full"></div>
                 <p class="mt-6 text-lg text-gray-600 dark:text-gray-300 max-w-2xl mx-auto">
-                    A showcase of my development projects spanning web applications, mobile apps, and system solutions.
+                   A showcase of my major development projects spanning web applications, mobile apps, and system solutions.
                 </p>
             </div>
 
